release notes for release 0.4.0 Fluorine
========================================

2013-10-17 - AKHE Added new action parameter escapes. 
					%event.class.str 	- Class as textstring
					%event.type.str  	- Type as teststring
					%measurement.float 	- measurement as a float
					%measurement.string	- meaurements as a string
					%eventdata.realtext	- Try to display event data in a
											human readable form.
2013-10-15 - AKHE 0.4.0.11
2013-10-15 - AKHE carambola binary build added.
2013-10-14 - AKHE Removes a bunch of non-critical warnings in ubuntu builds.
2013-10-01 - AKHE Fixed compile problem on 64-bit platforms that caused
                  /usr/bin/ld: ../../../../../common/crc.o: relocation R_X86_64_32S against
2013-10-01 - AKHE 0.4.0.10
2013-10-01 - AKHE Fixed problems in install part of main make file
2013-09-25 - AKHE Fixed bug that caused segfault when adding a new boolean variable in the internal web interface
2013-09-25 - AKHE Missing comma in conversion of writeVscpEventToString caused problems in websocket.
2013-09-18 - AKHE Release 0.4.0.9 Fluorine.
2013-09-10 - AKHE Added help/about to internal webserver internal pages.
2013-09-10 - AKHE Fixed problem in DM fed that could cause segfault.
2013-09-10 - AKHE Drivers can now be enabled/disabled in configuration file.
2013-09-04 - AKHE Added som method to Level II drivers that can be used to
                    serve driver specific internal web pages. Can be used for custom
                    configuration etc.
2013-08-30 - AKHE INternal webserver and web interface in place.
2013-07-17 - AKHE Loglevel now 0-8. Can use numeric or tectual form.
                    
2013-06-29 - AKHE Added clone button to session window in VSCP Works
2013-05-30 - AKHE Changed writeVscpEventToStringEx to writeVscpEventExToString 
                  in VSCP helper lib. This will break some software compiles. 
                  Sorry for that.
		  All methods now in helper lib for Linux.
